--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -30,6 +30,7 @@ jobs:
 
       - name: Test push image
         run: |
+          docker pull herdanis/simple-service:1.0
           docker tag herdanis/simple-service:1.0 llyidregistry.azurecr.io/devops:${{ github.sha }}-${{ secrets.INI_SECRET }}
           docker push llyidregistry.azurecr.io/devops:${{ github.sha }}-${{ secrets.INI_SECRET }}
 
